# maxsaas

./: .env.example  .gitignore  README.md  pyproject.toml  sheet_template.csv
src/sales_lead_builder/: __init__.py  cli.py  config.py  google_sheets.py  models.py  processor.py  reporting.py  search_client.py  site_scraper.py  site_selector.py
tests/: test_models.py  test_site_scraper.py  test_site_selector.py
ui/: .gitignore  README.md  app.py
